# OpenWinch-Cpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build_pi.sh  build_x86.sh  install_depend.sh  openwinch.repos
.github/: labeler.yml
.github/workflows/: build_dev.yml  build_release.yml  codeql-analysis.yml  labeler.yml  quality.yml
cmake/: CPack.cmake  checker-board.cmake  checker-git.cmake  compile-clang.cmake
cmake/deb/: NEWS.Debian  package-description.txt
cmake/deb/etc/init.d/: openwinch
cmake/deb/lib/systemd/system/: openwinch.service
cmake/extra/lcdgfx/: CMakeLists.txt
cmake/extra/lcdgfx/tools/sdl/: CMakeLists.txt
debian/: README.Debian  changelog  control  copyright  postinst  postrm  preinst  prerm
include/: bridge_io.hpp  config.hpp  constantes.hpp  controller.hpp  display.hpp  display_config.hpp  hardware.hpp  hardware_config.hpp  hardware_pi.hpp  hardwarepi.hpp  input.hpp  logger.hpp  mode.hpp  openwinch.hpp  runnable.hpp  state.hpp  tachometer.hpp  version.hpp  webserver.hpp  webserver_config.hpp
script/: bt.sh  build.sh  build_aarch64.sh  build_all.sh  build_eabi.sh  build_eabihf.sh  build_pi.sh  build_x86.sh  common_build.sh  install_depend.sh  valgrind-supress.txt  valgrind.sh
src/: CMakeLists.txt  bridge_pigpio.cpp  bridge_wiringpi.cpp  controller.cpp  display.cpp  hardware.cpp  hardware_pi.cpp  hardwarepi.cpp  logger.cpp  mode.cpp  openwinch.cpp  slog.cfg  state.cpp  tachometer.cpp  webserver.cpp
src/arduino/: bridge_arduino.cpp
src/emulator/: bridge_emulator.cpp  keyboard.cpp
src/fonts/: font_awesome.cpp  font_awesome.cpp.dis  font_freepixel.cpp  font_freepixel.cpp.dis  font_slant.cpp  font_slant.cpp.dis
src/pages/: extra.html.cpp  index.html.cpp
src/raspberry/: bridge_emulator.cpp  bridge_pigpio.cpp  bridge_wiringpi.cpp  hardware_pi.cpp  logger_slog.cpp  logger_spdlog.cpp  slog.cfg
test/: CMakeLists.txt  bridge_mock.hpp  controller_mock.h  controller_mock.hpp  controller_test.cpp  hardware_mock.h  hardware_mock.hpp  hardware_test.cpp  input_test.cpp  logger_test.cpp  main.cpp  mode_test.cpp  state_test.cpp  tachometer_mock.hpp  tachometer_test.cpp  webserver_test.cpp
